--- a/ninchatsdk/src/main/res/values/strings.xml
+++ b/ninchatsdk/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Ninchat SDK</string>
+    <string name="ninchat_contact_us">Contact us</string>
 </resources>
