--- a/ninchatsdk/src/main/res/values/strings.xml
+++ b/ninchatsdk/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="ninchat_start_description">Click a topic for more info or start chatting.</string>
     <string name="ninchat_blog_link">Ninchat blog</string>
     <string name="ninchat_start_chat">Start chat</string>
+    <string name="ninchat_queueing">Queueing</string>
+    <string name="ninchat_queue_title">Just a moment.</string>
+    <string name="ninchat_queue_description">We will help you in a moment.</string>
+    <string name="ninchat_queue_message">Did you know that Ninchat works on any website and mobile site, Facebook page, blog and mobile apps!</string>
 </resources>
