--- a/ninchatsdk/src/main/res/values/strings.xml
+++ b/ninchatsdk/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="ninchat_contact_us">Contact us</string>
+    <string name="ninchat_close">Close</string>
 
     <string name="ninchat_start_title">Welcome to Ninchat customer care.</string>
     <string name="ninchat_start_description">Click a topic for more info or start chatting.</string>
