--- a/ninchatsdk/src/main/res/values/strings.xml
+++ b/ninchatsdk/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
     <string name="ninchat_queue_description">We will help you in a moment.</string>
     <string name="ninchat_queue_message">Did you know that Ninchat works on any website and mobile site, Facebook page, blog and mobile apps!</string>
 
+    <string name="ninchat_chat_started">Keskustelu aloitettu</string>
+    <string name="ninchat_chat_ended">Keskustelu päättynyt</string>
     <string name="ninchat_chat_enter_message">Enter your message</string>
 
     <string name="ninchat_review_title">How was our customer service?</string>
